Protect immutable registry snapshots and remove dense coordinate MapN costs